# german-credit

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: pre-commit_check.yml
data/: eda.html  raw_german_credit_data.csv  types_fixed_german_credit_data.parquet
docs/: eda-report-conclusions.md  model-training-process.md
notebooks/: baseline_model.ipynb  data_download.ipynb  eda.ipynb  feature_engineering.ipynb  init_data_exploration.ipynb  model_interpretation.ipynb  model_selection.ipynb
reports/: eda.html
src/: simple_train_pipeline.py
src/config/: config.json  config_schema.py
src/pipeline/: base_step.py  extraction.py  transformation.py
