[project]
name = "german-credit"
version = "0.1.0"
description = "Solución de un proyecto de ciencia de datos de principio a fin."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fitter==1.7.1",
    "imbalanced-learn==0.13.0",
    "imblearn==0.0",
    "ipykernel==6.29.5",
    "jinja2>=3.1.6",
    "llvmlite==0.44.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "pyarrow==19.0.0",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "shap==0.46.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
